--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
     <title>HippieChick Noms | Zaid</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header>
-      <h1>HippieChick Noms</h1>
+      <h1><a href="index.html">HippieChick Noms</a></h1>
       <nav class="nav-header">
         <ul>
           <li><a href="#">Home</a></li>
@@ -129,10 +132,14 @@
       <div>
         <ul class="social">
           <li>
-            <a href=""><img src="./img/iglogo.png" alt="" /></a>
+            <a href=""
+              ><img src="./img/iglogo.png" alt="" aria-label="facebook"
+            /></a>
           </li>
           <li>
-            <a href=""><img src="./img/fblogo.svg" alt="" /></a>
+            <a href=""
+              ><img src="./img/fblogo.svg" alt="" aria-label="instagram"
+            /></a>
           </li>
         </ul>
       </div>
