Fixed Image bug

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2 class="title green">Some of our products</h2>
         <div class="cards">
           <div class="card">
-            <img src="./img/BFC.png" alt="" />
+            <img src="BFC.png" alt="" />
             <h3 class="title green">Bananas for Coconuts</h3>
             <p>
               Christopher’s chocoholic dad, Mark, is the inspiration behind this
@@ -84,7 +84,7 @@
             <p>†Certified Organic</p>
           </div>
           <div class="card">
-            <img src="./img/pbc.png" alt="" />
+            <img src="pbc.png" alt="" />
             <h3 class="title green">Mark's Peanut Butter Chocolate</h3>
             <p>
               Our most snackable granola is a combination of dehydrated banana,
@@ -102,7 +102,7 @@
             <p>†Certified Organic</p>
           </div>
           <div class="card">
-            <img src="./img/cyoa.png" alt="" />
+            <img src="cyoa.png" alt="" />
             <h3 class="title green">Choose Your Own Adventure</h3>
             <p>
               Named after those great books you used to read as a kid, this
@@ -132,13 +132,11 @@
       <div>
         <ul class="social">
           <li>
-            <a href=""
-              ><img src="./img/iglogo.png" alt="" aria-label="facebook"
-            /></a>
+            <a href=""><img src="iglogo.png" alt="" aria-label="facebook" /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./img/fblogo.svg" alt="" aria-label="instagram"
+              ><img src="fblogo.svg" alt="" aria-label="instagram"
             /></a>
           </li>
         </ul>
